Removed Merge Conflicts